# SAO

./: .gitattributes  .gitignore  CLAUDE.md  COORDINATION.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-sao-image.yml  ci.yml  release.yml
crates/sao-core/: Cargo.toml
crates/sao-core/src/: agent_bridge.rs  ethical_bridge.rs  global_config.rs  identity_manager.rs  lib.rs  master_key.rs  skills.rs
crates/sao-core/src/vault/: encryption.rs  kdf.rs  mod.rs  types.rs
crates/sao-server/: Cargo.toml
crates/sao-server/src/: db.rs  installers.rs  main.rs  runtime.rs  security.rs  state.rs  vault_state.rs  ws.rs
crates/sao-server/src/auth/: agent_tokens.rs  middleware.rs  mod.rs  oidc.rs  session.rs  webauthn.rs
crates/sao-server/src/db/: admin.rs  admin_entity.rs  agent_tokens.rs  agents.rs  audit.rs  entity_archives.rs  installer_sources.rs  llm_providers.rs  migrate.rs  mod.rs  oidc.rs  orion.rs  pool.rs  sessions.rs  skills.rs  startup.rs  users.rs  vault.rs  vault_key.rs  webauthn.rs
crates/sao-server/src/llm/: anthropic.rs  gemini.rs  grok.rs  keys.rs  mod.rs  ollama.rs  openai.rs
crates/sao-server/src/routes/: admin.rs  agents.rs  auth.rs  bundle.rs  ethical.rs  health.rs  llm.rs  mod.rs  oidc.rs  orion.rs  runtime.rs  setup.rs  skills.rs  vault.rs
crates/sao-server/tests/: route_contracts.rs
docker/: Dockerfile  Dockerfile.sao  docker-compose.yml
docs/: SAO_INSTALLER_SPEC.md  STATUS.md  TESTING_STATUS.md  VAULT_AND_REGISTRY.md  agent_archetype.md  architecture.md  bootstrap-installer.md  installer-architecture.md  orion-sao-mvp.md  sao-deep-dive.md
docs/runbooks/: local-orion-sao-mvp.md  verify-orion-topic-shift.md
documents/: SAO_Orion_Architecture_Analysis_v2.docx
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  agents.ts  api-contracts.test.ts  auth.ts  client.ts  installer-sources.ts  llm-providers.ts  skills.ts  vault.ts
frontend/src/components/: AgentLlmFields.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts  useVault.ts
frontend/src/lib/: time-format.ts  webauthn.ts
frontend/src/pages/: AdminEntityArchivesPage.tsx  AdminInstallerSourcesPage.tsx  AdminLlmProvidersPage.tsx  AdminSkillReviewPage.tsx  AdminSsoPage.tsx  AdminUsersPage.tsx  AgentEventsPage.tsx  AgentsPage.tsx  AuditLogPage.tsx  BootstrapRequiredPage.tsx  Dashboard.tsx  Login.tsx  SetupWizard.tsx  SkillsCatalogPage.tsx  VaultPage.tsx  adminLlmProviderModels.test.ts  adminLlmProviderModels.ts
frontend/src/types/: index.ts
installer/: Dockerfile  requirements.txt  system_prompt.md
installer/bicep/: main.bicep  parameters.json
installer/bicep/modules/: container-app.bicep  keyvault.bicep  network.bicep  postgres.bicep
installer/shared/: azure_bootstrap_issue_catalog.json
installer/src/: __init__.py  agent.py  main.py
installer/src/tools/: __init__.py  azure.py  bicep.py  entra.py  graph.py  postgres.py  troubleshooting.py  validator.py  vault.py
installer/tests/: test_agent.py  test_azure.py  test_main.py  test_troubleshooting.py  test_validator.py  test_workflows.py
migrations/: 001_initial_schema.sql  002_skills_registry.sql  003_admin_work_items.sql  004_allow_oidc_challenge_type.sql  005_orion_egress_events.sql  006_agent_tokens.sql  007_llm_provider_settings.sql  008_agent_llm_defaults.sql  009_llm_provider_grok_gemini.sql  010_installer_sources.sql  011_entity_birth_archive.sql  012_orion_commissioning.sql
npm-package/: package.json
npm-package/scripts/: install.js
scripts/: build-windows.ps1  local-mvp-smoke.ps1  smoke-bundle-serve-validation.ps1  smoke-installer-validation.ps1  smoke-vault-passphrase.ps1  verify-orion-topic-shift.ps1
skills/azure-bootstrap-troubleshooting/: Cargo.toml  how-to-use.md  skill.toml
skills/azure-bootstrap-troubleshooting/src/: lib.rs
skills/web-search/: Cargo.toml  how-to-use.md  skill.toml
skills/web-search/src/: lib.rs
