[workspace]
resolver = "2"
members = [
    "crates/sao-core",
    "crates/sao-server",
]
[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["SAO Team"]
license = "MIT"
[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.21"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
dirs = "5.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm-siv = "0.11"
argon2 = "0.5"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
jsonwebtoken = "9"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
url = "2"
