[package]
name = "sao-server"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
sao-core = { path = "../sao-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
