[package]
name = "skill-web-search"
version = "0.1.0"
edition = "2021"
description = "Web search skill – fast, low-latency information retrieval for the Id tier"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
